# Cryptography-Engineering

Homework_1/Task_1/: Cargo.toml
Homework_1/Task_1/src/: main.rs
Homework_1/Task_1/src/crypto/: aead.rs  hkdf.rs  mod.rs  signdemo.rs
Homework_1/Task_1/src/io/: readline.rs
Homework_1/Task_2/: Cargo.toml  ToDo.txt
Homework_1/Task_2/src/: lib.rs  main.rs
Homework_1/Task_2/src/crypto/: dhke.rs  hkdf.rs  hmac.rs  keyExtract.rs  key_extract.rs  mod.rs  vec_bytes.rs
Homework_1/Task_2/src/encode/: encode_b64.rs  mod.rs
Homework_1/Task_2/src/io/: encode.rs
Homework_1/Task_3/: Cargo.toml
Homework_1/Task_3/src/: lib.rs  main.rs
Homework_1/Task_3/src/crypto/: ecdsademo.rs  mod.rs
Homework_1/Task_3/src/io/: encode.rs  mod.rs
