[package]
name = "Task_2"
version = "0.1.0"
edition = "2024"

[dependencies]
# DHKE
x25519-dalek = "2.0.1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.8"

# HKDF with SHA3-256
hkdf = "0.12.4"
sha3 = "0.10"
sha2 = "0.10"

# AEAD (AES-256-GCM)
aes-gcm = "0.10"
aead = "0.5"

# Utilities
anyhow = "1.0"
base64 = "0.21"
hex = "0.4"
hex-literal = "1.1.0"
hmac = "0.12.1"
rcgen = "0.14.5"
